force-app/main/default/objects/Case/fields/AI_Transcript__c.field-meta.xml
<CustomField>
    <fullName>AI_Transcript__c</fullName>
    <label>AI Transcript</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>