force-app/main/default/objects/Case/fields/Next_Best_Action__c.field-meta.xml
<CustomField>
    <fullName>Next_Best_Action__c</fullName>
    <label>Next Best Action</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>